tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_traits_error_on_duplicate_impl_with_associated_type/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Impl for type `i32` overlaps with existing impl
   ┌─ src/main.nr:6:14
   │
 6 │         impl Foo for i32 {
   │              --- Previous impl defined here
   ·
10 │         impl Foo for i32 {
   │                      --- Overlapping impl
   │

Aborting due to 1 previous error
