tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_traits_error_on_duplicate_impl_with_associated_type/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Impl for type `i32` overlaps with existing impl
   ┌─ src/main.nr:6:14
   │
 6 │         impl Foo for i32 {
   │              --- Previous impl defined here
   ·
10 │         impl Foo for i32 {
   │                      --- Overlapping impl
   │

Aborting due to 1 previous error
